# piet-android-demo

./: README.md  build.gradle  settings.gradle  shell.nix
app/: build.gradle
app/src/androidTest/java/io/marcopolo/pietdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/io/marcopolo/druid/: DruidView.kt
app/src/main/java/io/marcopolo/pietdemo/: MainActivity.kt  PietDemoView.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/io/marcopolo/pietdemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml  shell.nix
rust/src/: calc.rs  hello.rs  lib.rs
