[package]
name = "pietdemo"
version = "0.1.0"
authors = ["Marco Munizaga <marco@marcopolo.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.1.39"

[target.'cfg(target_os = "android")'.dependencies]
jni-sys = "0.3.0"
jni-glue = { git = "https://github.com/MarcoPolo/jni-bindgen" }
jni = "0.14.0"
log = "0.4.8"
# TODO only ask for specific features
jni-android-sys = {version = "0.0.10",  features = [
    "api-level-28",
    "java-lang-String",
]}
android_logger = "0.8"
piet-common = {git = "https://github.com/marcopolo/piet", features = ["android"]}
piet = {git = "https://github.com/marcopolo/piet"}
druid-shell = {git = "https://github.com/marcopolo/druid", branch = "android-druid", features = ["android"]}
druid = {git = "https://github.com/marcopolo/druid", branch = "android-druid", features = ["android"]}
image = "0.20.1"

[patch.crates-io]
jni-glue = {git = "https://github.com/marcopolo/jni-bindgen"}
piet-common = {git = "https://github.com/marcopolo/piet"}

[lib]
crate-type = ["cdylib"]